--- a/ipa325_kms40_emulator/src/ipa325_kms40_emulator/ipa325_kms40_emulator.ui
+++ b/ipa325_kms40_emulator/src/ipa325_kms40_emulator/ipa325_kms40_emulator.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1013</width>
-    <height>727</height>
+    <height>744</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,20 +32,40 @@
             <item>
              <widget class="QLabel" name="label">
               <property name="text">
-               <string>WrenchStamped Publisher Topic</string>
+               <string>WrenchStamped Publisher Topic:</string>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QLineEdit" name="lineEdit_topic">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
               <property name="text">
                <string>/kms40</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="label_9">
+              <property name="text">
+               <string>frameId:</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="lineEdit_frameId">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>/kms40Frame</string>
               </property>
              </widget>
             </item>
@@ -72,12 +92,38 @@
               </property>
              </widget>
             </item>
+            <item>
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
            </layout>
           </widget>
          </item>
          <item>
           <widget class="QWidget" name="widget_14" native="true">
            <layout class="QVBoxLayout" name="verticalLayout_10">
+            <item>
+             <spacer name="verticalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
             <item>
              <widget class="QPushButton" name="pushButton_run">
               <property name="text">
@@ -234,20 +280,20 @@
        </widget>
       </item>
       <item>
-       <widget class="QWidget" name="widget_7" native="true">
-        <layout class="QVBoxLayout" name="verticalLayout_5">
+       <widget class="QWidget" name="widget_9" native="true">
+        <layout class="QVBoxLayout" name="verticalLayout_6">
          <item>
-          <widget class="QLabel" name="label_5">
+          <widget class="QLabel" name="label_6">
            <property name="text">
-            <string>Moment A (around Z):</string>
+            <string>Moment C (around X):</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QWidget" name="widget_8" native="true">
-           <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <widget class="QWidget" name="widget_10" native="true">
+           <layout class="QHBoxLayout" name="horizontalLayout_5">
             <item>
-             <widget class="QDoubleSpinBox" name="doubleSpinBox_forceA">
+             <widget class="QDoubleSpinBox" name="doubleSpinBox_forceC">
               <property name="minimum">
                <double>-1000.000000000000000</double>
               </property>
@@ -260,7 +306,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QSlider" name="horizontalSlider_forceA">
+             <widget class="QSlider" name="horizontalSlider_forceC">
               <property name="minimum">
                <number>-1000</number>
               </property>
@@ -324,20 +370,20 @@
        </widget>
       </item>
       <item>
-       <widget class="QWidget" name="widget_9" native="true">
-        <layout class="QVBoxLayout" name="verticalLayout_6">
+       <widget class="QWidget" name="widget_7" native="true">
+        <layout class="QVBoxLayout" name="verticalLayout_5">
          <item>
-          <widget class="QLabel" name="label_6">
+          <widget class="QLabel" name="label_5">
            <property name="text">
-            <string>Moment C (around X):</string>
+            <string>Moment A (around Z):</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QWidget" name="widget_10" native="true">
-           <layout class="QHBoxLayout" name="horizontalLayout_5">
+          <widget class="QWidget" name="widget_8" native="true">
+           <layout class="QHBoxLayout" name="horizontalLayout_4">
             <item>
-             <widget class="QDoubleSpinBox" name="doubleSpinBox_forceC">
+             <widget class="QDoubleSpinBox" name="doubleSpinBox_forceA">
               <property name="minimum">
                <double>-1000.000000000000000</double>
               </property>
@@ -350,7 +396,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QSlider" name="horizontalSlider_forceC">
+             <widget class="QSlider" name="horizontalSlider_forceA">
               <property name="minimum">
                <number>-1000</number>
               </property>
