--- a/weiss_kms40_emulator/src/weiss_kms40_emulator/weiss_kms40_emulator.ui
+++ b/weiss_kms40_emulator/src/weiss_kms40_emulator/weiss_kms40_emulator.ui
@@ -45,7 +45,7 @@
                </sizepolicy>
               </property>
               <property name="text">
-               <string>/kms40</string>
+               <string>wrench</string>
               </property>
              </widget>
             </item>
@@ -65,7 +65,7 @@
                </sizepolicy>
               </property>
               <property name="text">
-               <string>/kms40Frame</string>
+               <string>force_frame</string>
               </property>
              </widget>
             </item>
